# agri-control-platform

./: README.md
apps/machine-control-unit/: CMakeLists.txt  LICENSE  actuator_manager.cpp  actuator_manager.h  main.cpp  mqtt_client.cpp  mqtt_client.h  sensor_manager.cpp  sensor_manager.h
yocto/meta-agri-machine/conf/: layer.conf
yocto/meta-agri-machine/recipes-agri/machine-control-unit/: machine-control-unit_0.1.bb
